--- a/locales/zh-Hans.yml
+++ b/locales/zh-Hans.yml
@@ -73,8 +73,17 @@ update_modal:
     is_current_compute_device:
 
 config_page:
-    version: "版本 {{version}}"
-    model_download_button_label:
+    common:
+        version: "版本 {{version}}"
+        model_download_button_label:
+        compute_device:
+            desc:
+            label_device:
+            label_type:
+            type_template_auto:
+            type_template_low:
+            type_template_high:
+
     side_menu_labels:
         device:
         appearance: "外观"
@@ -133,8 +142,6 @@ config_page:
             desc: "可以选择用于离线翻译的翻译模型"
             small: "普通模型 ({{capacity}})"
             large: "高精度模型 ({{capacity}})"
-        translation_compute_type:
-            label:
         translation_compute_device:
             label:
         deepl_auth_key:
@@ -179,8 +186,6 @@ config_page:
             desc:
             model_template: "{{model_name}} 模型 ({{capacity}})"
             recommended_model_template: "{{model_name}} 模型 ({{capacity}}) (推荐)"
-        transcription_compute_type:
-            label:
         transcription_compute_device:
             label:
 
