--- a/locales/en.yml
+++ b/locales/en.yml
@@ -73,8 +73,17 @@ update_modal:
     is_current_compute_device: "The version currently in use"
 
 config_page:
-    version: "Version {{version}}"
-    model_download_button_label: "Download"
+    common:
+        version: "Version {{version}}"
+        model_download_button_label: "Download"
+        compute_device:
+            desc: "The accuracy and speed of each processing type may vary depending on your machine specs, and the compatibility with calculation methods may differ from the displayed order. Please use this as a general guideline."
+            label_device: "Processing Device"
+            label_type: "Processing Type"
+            type_template_auto: "Automatic"
+            type_template_low: "{{type_name}} (Lower accuracy, faster processing)"
+            type_template_high: "{{type_name}} (Higher accuracy, slower processing)"
+
     side_menu_labels:
         device: "Device"
         appearance: "Appearance"
@@ -133,8 +142,6 @@ config_page:
             desc: "You can choose the translation model when using the {{ctranslate2}} translation engine."
             small: "Basic Model ({{capacity}})"
             large: "High Accuracy Model ({{capacity}})"
-        translation_compute_type:
-            label: "Processing type for AI translation {{ctranslate2}}"
         translation_compute_device:
             label: "Processing device for AI translation"
         deepl_auth_key:
@@ -179,8 +186,6 @@ config_page:
             desc: "Larger models have higher accuracy, but they also consume more CPU or GPU resources.\nEspecially for models larger than medium, it may be difficult or even impossible to use them depending on the performance of your CPU/GPU."
             model_template: "{{model_name}} model ({{capacity}})"
             recommended_model_template: "{{model_name}} model ({{capacity}}) (Recommended)"
-        transcription_compute_type:
-            label: "Processing type for AI transcription {{whisper}}"
         transcription_compute_device:
             label: "Processing Device Used For AI transcription"
 
