--- a/locales/zh-Hant.yml
+++ b/locales/zh-Hant.yml
@@ -73,8 +73,17 @@ update_modal:
     is_current_compute_device:
 
 config_page:
-    version: "版本 {{version}}"
-    model_download_button_label:
+    common:
+        version: "版本 {{version}}"
+        model_download_button_label:
+        compute_device:
+            desc:
+            label_device:
+            label_type:
+            type_template_auto:
+            type_template_low:
+            type_template_high:
+
     side_menu_labels:
         device:
         appearance: "外觀"
@@ -133,8 +142,6 @@ config_page:
             desc: "你可以選擇用於離線翻譯引擎的翻譯模型。"
             small: "基本模型（{{capacity}}）"
             large: "高準確率模型（{{capacity}}）"
-        translation_compute_type:
-            label:
         translation_compute_device:
             label:
         deepl_auth_key:
@@ -179,8 +186,6 @@ config_page:
             desc:
             model_template: "{{model_name}}模型（{{capacity}}）"
             recommended_model_template: "{{model_name}}模型（{{capacity}}）（推薦）"
-        transcription_compute_type:
-            label:
         transcription_compute_device:
             label:
 
