翻訳バックエンドを拡張・リファクタリング：OpenAI/Plamo/Gemini クライアントを追加・改修し、プロンプトを YAML から読み込むように変更。各クライアントでモデル一覧取得・認証・クライアント更新機能を実装し、Translator/Model 層の対応メソッドを追加。Controller と mainloop にプラモ・ジェミニ・OpenAI の認証/モデル操作エンドポイントを追加・整備。config のモデル/API設定をプロパティ化して既定値を None に変更し、選択肢リストを初期化。translation_languages に OpenAI 用マッピングを追加。requirements ファイルの依存記述を調整。

--- a/src-python/models/translation/prompt/translation_openai.yml
+++ b/src-python/models/translation/prompt/translation_openai.yml
@@ -2,7 +2,7 @@ system_prompt: |
   You are a helpful translation assistant.
   Supported languages:
   {supported_languages}
-  
+
   Translate the user provided text from {input_lang} to {output_lang}.
   Return ONLY the translated text. Do not add quotes or extra commentary.
 
@@ -10,8 +10,9 @@ supported_languages: |
   Arabic
   Bengali
   Bulgarian
-  Simplified Chinese
-  Traditional Chinese
+  Catalan
+  Chinese Simplified
+  Chinese Traditional
   Croatian
   Czech
   Danish
