feat(build,config,test): Add ZLUDA support and enhance installation process
- Add ZLUDA installer module for AMD GPU acceleration support with automatic detection and installation
- Create install_zluda.bat script for Windows-based ZLUDA setup with user prompts and error handling
- Update install.bat to use Python 3.11 explicitly and integrate ZLUDA installation flow
- Add Chinese PyPI mirror support for faster package installation in install.bat
- Add comprehensive test suite for ZLUDA detection, installation, and device enumeration
- Add tests for audio recorder compatibility, speaker device configuration, and UI device display
- Add config.json configuration file for ZLUDA and device settings
- Update localization files (en, ja, ko, zh-Hans, zh-Hant) with ZLUDA information and status messages
- Enhance device_manager.py with ZLUDA device detection and enumeration capabilities
- Update transcription and translation modules to support ZLUDA-enabled devices
- Improve config.py with ZLUDA configuration persistence and validation
- Update controller.py to handle ZLUDA device initialization and fallback logic
- Update mainloop.py to integrate ZLUDA device management into main application flow
- Update NSIS installer template to include ZLUDA installation during setup
- Enhance UI advanced settings to display ZLUDA status and device information
- Update vite.config.js and utility functions to support ZLUDA configuration display
- This enables AMD GPU users to leverage hardware acceleration

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -302,6 +302,15 @@ config_page:
             label: "Open Config File"
         switch_compute_device:
             label: "Switch VRCT To CPU/GPU Version"
+        zluda_info:
+            label: "ZLUDA (AMD GPU Support)"
+            status_installed: "Installed at: {{path}}"
+            status_not_installed: "Not installed"
+            version: "Version: {{version}}"
+            devices: "AMD GPUs detected: {{count}}"
+            help_text: "ZLUDA enables AMD GPU acceleration for AI models. It was automatically installed during setup."
+            help_link: "Learn more about ZLUDA"
+            manual_install: "To manually install ZLUDA, download from GitHub and extract to the 'zluda' folder in the VRCT installation directory."
         enable_websocket:
             label: "Enable WebSocket Server"
         websocket_host:
