[Add] Groq: Implement Groq API integration with authentication, model management, and translation capabilities.

--- a/src-python/models/translation/languages/languages.yml
+++ b/src-python/models/translation/languages/languages.yml
@@ -769,3 +769,7 @@ LMStudio:
 Ollama:
   source: *openai_langs
   target: *openai_langs
+
+Groq_API:
+  source: *openai_langs
+  target: *openai_langs
