[Add] OpenRouter: Integrate OpenRouter API for authentication, model management, and translation capabilities.

--- a/src-python/models/translation/languages/languages.yml
+++ b/src-python/models/translation/languages/languages.yml
@@ -773,3 +773,7 @@ Ollama:
 Groq_API:
   source: *openai_langs
   target: *openai_langs
+
+OpenRouter_API:
+  source: *openai_langs
+  target: *openai_langs
