feat: Implement translation prompt history injection for Chat/Mic/Speaker
- Added a history management system in model.py to store and retrieve recent messages from Chat, Mic, and Speaker.
- Updated controller.py to automatically add messages to the translation history after processing.
- Enhanced translation clients (OpenAI, Gemini, Groq, etc.) to accept and utilize context history for improved translation quality.
- Introduced YAML configuration options for enabling history injection and customizing its behavior across different translation models.
- Ensured that only original messages are stored in history to optimize token usage during translation.

--- a/src-python/models/translation/translation_settings/prompt/translation_gemini.yml
+++ b/src-python/models/translation/translation_settings/prompt/translation_gemini.yml
@@ -5,3 +5,12 @@ system_prompt: |
 
   Translate the user provided text from {input_lang} to {output_lang}.
   Return ONLY the translated text. Do not add quotes or extra commentary.
+history:
+  use_history: true
+  sources: [chat, mic, speaker]
+  max_messages: 5
+  max_chars: 4000
+  header_template: |
+    Conversation context (recent {max_messages} messages):
+    {history}
+  item_template: "[{timestamp}][{source}] {text}"
