--- a/src-python/models/translation/translation_settings/prompt/translation_lmstudio.yml
+++ b/src-python/models/translation/translation_settings/prompt/translation_lmstudio.yml
@@ -5,3 +5,12 @@ system_prompt: |
 
   Translate the user provided text from {input_lang} to {output_lang}.
   Return ONLY the translated text. Do not add quotes or extra commentary.
+history:
+  use_history: true
+  sources: [chat, mic, speaker]
+  max_messages: 5
+  max_chars: 4000
+  header_template: |
+    Conversation context (recent {max_messages} messages):
+    {history}
+  item_template: "[{timestamp}][{source}] {text}"
