--- a/locales/en.yml
+++ b/locales/en.yml
@@ -77,6 +77,7 @@ config_page:
         version: "Version {{version}}"
         model_download_button_label: "Download"
         correct_auth_key_required: "Correct Auth Key Required"
+        open_auth_key_webpage: "Open Auth Key Management Webpage"
         compute_device:
             desc: "The accuracy and speed of each processing type may vary depending on your machine specs, and the compatibility with calculation methods may differ from the displayed order. Please use this as a general guideline."
             label_device: "Processing Device"
