[Update] Add connection check functionality and new auth key labels in translation files.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -78,6 +78,11 @@ config_page:
         model_download_button_label: "Download"
         correct_auth_key_required: "Correct Auth Key Required"
         open_auth_key_webpage: "Open Auth Key Management Webpage"
+        connection_check:
+            button_label: "Connection Check"
+            checking: "Checking..."
+            connected: "Connected"
+            disconnected: "Disconnected"
         compute_device:
             desc: "The accuracy and speed of each processing type may vary depending on your machine specs, and the compatibility with calculation methods may differ from the displayed order. Please use this as a general guideline."
             label_device: "Processing Device"
@@ -148,6 +153,7 @@ config_page:
             large: "High Accuracy Model ({{capacity}})"
         translation_compute_device:
             label: "Processing device for AI translation"
+
         deepl_auth_key:
             label: "DeepL Auth Key"
             desc: "When using it, please change {{translator}} on the main screen to DeepL_API. ※Some languages may not be supported."
@@ -155,6 +161,43 @@ config_page:
             save: "Save"
             edit: "Edit"
             auth_key_success: "Auth key update completed."
+
+        plamo_auth_key:
+            label: "Plamo Auth Key"
+        select_plamo_model:
+            label: "Select Plamo Model"
+
+        gemini_auth_key:
+            label: "Gemini Auth Key"
+        select_gemini_model:
+            label: "Select Gemini Model"
+
+        openai_auth_key:
+            label: "OpenAI Auth Key"
+        select_openai_model:
+            label: "Select OpenAI Model"
+
+        groq_auth_key:
+            label: "Groq Auth Key"
+        select_groq_model:
+            label: "Select Groq Model"
+
+        openrouter_auth_key:
+            label: "OpenRouter Auth Key"
+        select_openrouter_model:
+            label: "Select OpenRouter Model"
+
+        lmstudio_connection_check:
+            label: "Check LM Studio Connection"
+        select_lmstudio_model:
+            label: "Select LMStudio Model"
+            connection_required: "LMStudio Connection Required"
+
+        ollama_connection_check:
+            label: "Check Ollama Connection"
+        select_ollama_model:
+            label: "Select Ollama Model"
+            connection_required: "Ollama Connection Required"
 
     transcription:
         section_label_mic: "Mic"
