--- a/locales/zh-Hant.yml
+++ b/locales/zh-Hant.yml
@@ -264,6 +264,9 @@ config_page:
         right_hand: "右手"
         overlay_show_only_translated_messages:
             label: "僅顯示翻譯後的訊息"
+        voice_typing_mode:
+            label:
+            desc:
 
     others:
         section_label_sounds: "音效"
